# document-uploader

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  compose.yml  generate_password.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: docker-build.yml
static/: style.css
templates/: base.html  login.html  upload.html
