[project]
name = "document-uploader"
version = "0.2.0"
description = "Document uploader for Paperless-ngx"
readme = "README.md"
authors = [
    { name = "Timo Schäpe", email = "info@timoschaepe.de" }
]
requires-python = ">=3.12"
dependencies = [
    "flask==3.1.2",
    "flask-limiter==4.1.1",
    "gunicorn==23.0.0",
    "python-dotenv==1.2.1",
    "werkzeug==3.1.4",
]
